test/errors/undeclared_target.trm
machine Error

states: q0 q1
accept: q1
init: q0
tapes: 1 5 ""

q0 | '_' | q2 |  ?  | ?
q0 | 'q' | q1 | 'q' | =

end